feat: integrate simple logging